BUG: 187600

Some battery status changes weren't emited if the charge percentage had 
changed. This was due to nested if's.

svn path=/trunk/KDE/kdelibs/; revision=947131